<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/bgDefault"
    tools:context="com.example.recycraft.ui.signup.SignupActivity">

    <TextView
        android:id="@+id/signup_heading"
        style="@style/TextStyle.Head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_heading"
        android:fontFamily="@font/alata"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_subheading"/>
    <TextView
        android:id="@+id/signup_subheading"
        style="@style/TextStyle.Sub"
        android:fontFamily="@font/alata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_subheading"
        app:layout_constraintTop_toBottomOf="@id/signup_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_logo"/>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/recycraft_logo"
        android:src="@drawable/recycraft_logo"
        app:layout_constraintBottom_toTopOf="@id/name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_subheading"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/name_title"
        style="@style/TextStyle.Title"
        android:fontFamily="@font/alata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_input"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/alata"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toTopOf="@id/email_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_title" />

    <TextView
        android:id="@+id/email_title"
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:fontFamily="@font/alata"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_input"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/alata"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toTopOf="@id/pass_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_title" />

    <TextView
        android:id="@+id/pass_title"
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pass_input"/>

    <EditText
        android:id="@+id/pass_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/alata"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_login"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_input"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/prompt_login"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="@id/login_button"
        app:layout_constraintEnd_toStartOf="@id/login_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_button" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:fontFamily="@font/alata"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_prompt"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>